[package]
name = "messages-actix"
version = "0.1.0"
authors = ["J. Cohen <hostelmarketing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
# "most crates in Rust use the log crate" -- env_logger is one
# implementation
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
